welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:-4: error: Unmatched closing brace '}' ignored here
	}
        ^RunFour:-3: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^RunFour:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^