welcome.lessons.welcome.variables.RunFour.scala.code
var nbb:Int=0


while (nbb!=4) {
	while (!estSurBiscuit) {
	avance()}
	nbb=nbb+1
}
}